# pitch-detection

./: CMakeLists.txt
include/: pitch_detection.h
src/: autocorrelation.cpp  hmm.cpp
